--- a/lastminute/requirements.txt
+++ b/lastminute/requirements.txt
@@ -1,70 +1,5 @@
-aiocontextvars==0.2.2
-aioquic==0.9.20
-attr==0.3.2
-attrs==21.4.0
-bpython==0.24
-brotli==1.0.9
-brotlicffi==1.0.9.2
-ConfigParser==5.3.0
-contextlib2==21.6.0
-cryptography==39.0.2
-curio==1.6
-cx_Oracle==8.3.0
-Cython==0.29.33
-disco==1.40.4
-dl==0.1.0
-docutils==0.16
-genapi==0.0.8
-HTMLParser==0.0.2
-httpx==0.23.3
-hypothesis==6.68.2
-ipdb==0.13.11
-ipython==8.11.0
-ipywidgets==7.7.0
-jnius==1.1.0
-keyring==23.13.1
-lockfile==0.12.2
-lz4==4.3.2
-matplotlib==3.5.1
-mock==5.0.1
-mtrand==0.1
-mypy==1.0.1
-MySQL-python==1.2.5
-nose==1.3.7
-numarray==1.5.1
-Numeric==24.2
-pandas==1.4.3
-pickle5==0.0.12
-Pillow==9.4.0
-protobuf==4.22.0
-protoc_gen_openapiv2==0.0.1
-psutil==5.9.0
-psycopg2==2.9.3
-PyInstaller==5.8.0
-pylibmc==1.6.3
-pymemcache==4.0.0
-pyOpenSSL==23.0.0
-pytest==7.2.2
-pytz==2022.1
-pywatchman==1.4.1
-railroad==0.5.0
-requests_toolbelt==0.10.1
-responses==0.18.0
-scipy==1.8.0
-setuptools_scm==7.1.0
-simplejson==3.18.3
-slack_sdk==3.20.0
-sniffio==1.3.0
-Sphinx==6.1.3
-tblib==1.7.0
-tensorflow==2.8.0
-threadpoolctl==3.1.0
-tornado==6.1
-trio==0.22.0
-trove_classifiers==2023.2.20
-truststore==0.5.0
-urllib3_mock==0.3.3
-urllib3_secure_extra==0.1.0
-win32_setctime==1.1.0
-wmi==1.5.1
-xmlrpclib==1.0.1
+cohere==3.8.0
+Django==4.0.6
+numpy==1.22.3
+pinecone==0.1.0
+pinecone_client==2.2.1
